--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -60,3 +60,33 @@ button:hover{
   color: aliceblue;
   transform: scale(1.1);
 }
+.child {
+  color: black;
+  text-align: center;
+  margin: 10px;
+  padding: 10px;
+  border: 5px solid black;
+  border-radius: 50px;
+  background-color: aqua;
+  transition: all 0.3s ease-in-out;
+}
+.child:hover{
+  background-color: black;
+  color: aliceblue;
+  transform: scale(1.1);
+}
+p{
+  color: #000;
+  text-align: center;
+  margin: 10px;
+  padding: 10px;
+  border: 5px solid black;
+  border-radius: 50px;
+  background-color: rgb(255, 255, 255);
+  transition: all 0.3s ease-in-out;
+}
+p:hover{
+  background-color: black;
+  color: aliceblue;
+  transform: scale(1.1);
+}
