--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -1,92 +1,53 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body{
-  background-color: #b5b4b4;
+.App {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh
-}
-
-
-.app{
-  color: rgb(116, 87, 87);
-  text-align: center;
-  margin: 10px;
-  padding: 10px;
-  border: 5px solid black;
-  border-radius: 50px;
-  background-color: aqua;
-
-
-}
-
-.app2{
-  color: red;
-}
-.conta{
-  display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
+  width: 100vw;
+  min-height: 100vh;
+  background-color: #8d8d8d;
 }
-button{
-  padding: 10px;
-  margin: 10px;
-  background-color: antiquewhite;
-  color:black;
-  transition: all 0.5s ease-in-out;
+.Header {
+  background-color: #000000;
+  padding: 20px;
+  width:100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
-button:hover{
-  background-color: black;
-  color: aliceblue;
-  transform: scale(1.1);
+.main-layout {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px;
 }
-.Hi{
+.posts{
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  gap: 20px
+}
+.post {
+  flex: 1;
+  width: 600px;
+  background-color: #828181;
+  padding: 20px;
+}
+.post h1{
   color: #000;
-  text-align: center;
+  font-size: 32px;
   margin: 10px;
-  padding: 10px;
-  border: 5px solid black;
-  border-radius: 50px;
-  background-color: aqua;
-  transition: all 0.3s ease-in-out;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #000;
 }
-.Hi:hover{
-  background-color: black;
-  color: aliceblue;
-  transform: scale(1.1);
-}
-.child {
-  color: black;
-  text-align: center;
-  margin: 10px;
-  padding: 10px;
-  border: 5px solid black;
-  border-radius: 50px;
-  background-color: aqua;
-  transition: all 0.3s ease-in-out;
-}
-.child:hover{
-  background-color: black;
-  color: aliceblue;
-  transform: scale(1.1);
-}
-p{
+.post p{
   color: #000;
-  text-align: center;
+  font-size: 20px;
   margin: 10px;
-  padding: 10px;
-  border: 5px solid black;
-  border-radius: 50px;
-  background-color: rgb(255, 255, 255);
-  transition: all 0.3s ease-in-out;
 }
-p:hover{
-  background-color: black;
-  color: aliceblue;
-  transform: scale(1.1);
+.SideBar{
+  flex: 1;
+  background-color: #eee;
+  padding: 20px;
 }
