--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #b5b4b4;
+  background-color: #8d8d8d;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
