--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -1,53 +1,17 @@
 .App {
-  display: flex;
-  flex-direction: column;
-  width: 100vw;
-  min-height: 100vh;
-  background-color: #8d8d8d;
-}
-.Header {
-  background-color: #000000;
-  padding: 20px;
-  width:100%;
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
-}
-.main-layout {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 20px;
-}
-.posts{
-  flex: 3;
-  display: flex;
-  flex-direction: column;
-  gap: 20px
-}
-.post {
-  flex: 1;
-  width: 600px;
-  background-color: #828181;
-  padding: 20px;
-}
-.post h1{
-  color: #000;
-  font-size: 32px;
-  margin: 10px;
-  padding-bottom: 10px;
-  border-bottom: 1px solid #000;
-}
-.post p{
-  color: #000;
-  font-size: 20px;
-  margin: 10px;
-}
-.SideBar{
-  flex: 1;
-  background-color: #eee;
-  padding: 20px;
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  padding: 2rem;
+  text-align: center;
 }
