--- a/TO-DO List/src/index.css
+++ b/TO-DO List/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background: linear-gradient(to right, rgb(180, 134, 180),rgb(176, 238, 176));
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
