--- a/TO-DO List/src/App.css
+++ b/TO-DO List/src/App.css
@@ -12,6 +12,32 @@
   align-items: center;
   height: 100vh;
 }
+.Containers{
+  /* background: rgba(255, 255, 255, 0.2); */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.5);
+  
+}
+.Task{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-right: 20px;
+  width: auto;
+  height: auto;
+}
+.checkbox input{
+  width: 35px;
+  height: 35px;
+  accent-color: rgb(0, 255, 0);
+}
 .App h1{
   color: teal;
   font-size: 70px;
@@ -33,12 +59,16 @@
   background-color: rgb(0, 92, 92);
   color: #ffffff;
 }
+.Btn:focus{
+  background-color: rgb(0, 92, 92);
+  color: #ffffff;
+}
 .List{
   display: flex;
   justify-content: space-between;
   align-items: center;
   list-style: none;
-  padding: 10px 20px;
+  padding: 5px 15px;
   margin: 10px;
   background-color: #cbcbcbff;
   border-radius: 10px;
@@ -57,11 +87,13 @@
   box-shadow: 0 5px 7px rgba(0,0,0,0.5);
   cursor: pointer;
   transition: all 0.3s ease-in-out;
+  outline: none;
 }
 .DELBtn:hover{
-  background-color: rgb(92, 0, 0);
+  background-color: rgb(127, 0, 0);
   color: #ffffff;
   transform: scale(1.1);
+  border: none;
 }
 .EditBtn{
   color: #fff;
@@ -76,6 +108,8 @@
   background-color: rgb(0, 0, 0);
   color: #ffffff;
   transform: scale(1.1);
+  box-shadow: 0 5px 7px rgb(0,0,0);
+  border: none;
 }
 .App input::placeholder{
   color: #979696;
@@ -83,4 +117,10 @@
   font-weight: bold;
   padding-top: 10px;
   
+}
+.App input{
+  font-size: large;
+}
+.App input:focus{
+  outline: none;
 }
