--- a/TO-DO List/src/index.css
+++ b/TO-DO List/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background: linear-gradient(to right, rgb(180, 134, 180),rgb(176, 238, 176));
+  background: linear-gradient(45deg, rgb(180, 134, 180),rgb(177, 255, 177),rgb(255, 189, 255),rgb(166, 248, 166));
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
