--- a/Loan/src/App.css
+++ b/Loan/src/App.css
@@ -11,5 +11,34 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: linear-gradient(45deg, rgb(180, 134, 180),rgb(177, 255, 177),rgb(255, 189, 255),rgb(166, 248, 166));
+}
+.container{
+  background-color: #5b5b5b;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  /* max-width: 500px; */
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.5);
+  padding: 25px;
+}
+.container hr{
+  width: 100%;
+}
+.container label{
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+}
+.container input{
+  width: 100%;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #fff;
+  color: #000;
+  font-size: large;
 }
