--- a/Loan/src/App.css
+++ b/Loan/src/App.css
@@ -13,7 +13,7 @@
   height: 100vh;
 }
 .container{
-  background-color: #5b5b5b;
+  background-color: #280069;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -41,4 +41,31 @@
   background-color: #fff;
   color: #000;
   font-size: large;
+}
+.select{
+  width: 100%;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #fff;
+  color: #000;
+  font-size: large;
+}
+.check{
+  width: 30px;
+  height: 30px;
+}
+.btn{
+  padding:10px 12px; 
+  background-color:teal; 
+  color:#fff;
+  border:teal solid 1px;
+  margin: 10px;
+  box-shadow: 0 5px 7px rgba(0,0,0,0.5);
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+.btn:hover{
+  background-color: rgb(0, 92, 92);
+  color: #ffffff;
 }
