--- a/Loan/src/index.css
+++ b/Loan/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #ffb3b3;
+  background:linear-gradient(45deg,#898989,#353651);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
