--- a/TO-DO List/src/App.css
+++ b/TO-DO List/src/App.css
@@ -134,3 +134,28 @@
 .App input:focus{
   outline: none;
 }
+@media (max-width: 768px) {
+  .Containers{
+    width: 100%;
+    height: auto;
+  }
+  .App h1{
+    font-size: 50px;
+    text-align: center;
+  }
+  .List{
+    width: 80%;
+    font-size: 15px;
+  }
+  .App p{
+    font-size: 15px;
+  }
+  .Btn{
+    display: block;
+    margin: 10px auto;
+  }
+  .DELBtn{
+    display: block;
+    margin-left:40px;
+  }
+}
