--- a/Loan/src/App.css
+++ b/Loan/src/App.css
@@ -18,7 +18,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 50%;
+  width: 40%;
   /* max-width: 500px; */
   height: auto;
   border-radius: 10px;
@@ -41,6 +41,13 @@
   background-color: #fff;
   color: #000;
   font-size: large;
+}
+.container p{
+  color: #000;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: yellow;
+  padding: 10px;
 }
 .select{
   width: 100%;
@@ -89,4 +96,26 @@
   border-radius: 10px;
   box-shadow: 0 5px 10px rgba(0,0,0,0.5);
   width: 100vw;
+}
+
+@media(max-width: 768px){
+  .container{
+    width: 100%;
+    height: 100%;
+  }
+  .container p{
+    font-size: 20px;
+  }
+  .container label{
+    font-size: 15px;
+  }
+  .container input{
+    font-size: 15px;
+    width: 80%;
+    
+  }
+  .container select{
+    font-size: 15px;
+    width: 80%;
+  }
 }
