--- a/Loan/src/App.css
+++ b/Loan/src/App.css
@@ -81,32 +81,15 @@
   background-color: rgb(0, 92, 92);
   color: #ffffff;
 }
-#Modal{
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.313);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#Modal-content{
-  background-color: #fff;
-  color: rgb(0, 193, 0);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-  border-radius: 10px;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.5);
-  width: 100vw;
-}
 
 @media(max-width: 768px){
   .container{
     width: 100%;
     height: 100%;
+  }
+  .container h1{
+    font-size: 30px;
+    text-align: center;
   }
   .container p{
     font-size: 20px;
