--- a/Loan/src/App.css
+++ b/Loan/src/App.css
@@ -18,7 +18,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 40%;
+  width: 50%;
   /* max-width: 500px; */
   height: auto;
   border-radius: 10px;
@@ -93,6 +93,7 @@
   }
   .container p{
     font-size: 20px;
+    text-align: center;
   }
   .container label{
     font-size: 15px;
