--- a/Loan/src/App.css
+++ b/Loan/src/App.css
@@ -32,6 +32,7 @@
   color: #fff;
   font-size: 20px;
   font-weight: bold;
+  text-align: center;
 }
 .container input{
   width: 100%;
@@ -42,7 +43,15 @@
   color: #000;
   font-size:larger;
 }
-
+.container input[type="number"]{
+  width: 100%;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #fff;
+  color: #000;
+  font-size:larger;
+}
 .container p{
   color: #000;
   font-size: 20px;
@@ -81,6 +90,7 @@
   background-color: rgb(0, 92, 92);
   color: #ffffff;
 }
+
 
 @media(max-width: 768px){
   .container{
