--- a/React-Router/src/App.css
+++ b/React-Router/src/App.css
@@ -20,6 +20,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: #fff;
   width: 50%;
   height: auto;
   border-radius: 10px;
@@ -37,4 +38,39 @@
 }
 button{
   margin: 5px;
+}
+
+hr{
+  width: 100%;
+}
+
+.App2{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background: linear-gradient(45deg, #a2a2a2,#eadada)
+}
+.App2 h1{
+  color: #000;
+}
+.App2 h2{
+  color: #000;
+
+}
+#Go{
+  background-color: rgba(255, 255, 255, 0.432);
+  color: #000;
+  font-size: 20px;
+  transition: all 0.3s ease-in-out;
+}
+#Go:hover{
+  background-color: rgba(0, 0, 0, 0.432);
+  color: #fff;
+  font-size: 20px;
+  outline: none;
+  border: none;
 }
