--- a/React-Router/src/index.css
+++ b/React-Router/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #787878;
+  background:linear-gradient(50deg,#b9b9b9,#767676);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
