--- a/Sunnah-App/src/index.css
+++ b/Sunnah-App/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #adadad;
+  background:linear-gradient(45deg, #bcbcbc 0%, #ffffffa7 100%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
