--- a/Sunnah-App/src/Ahadith hasan/ALtermithi.css
+++ b/Sunnah-App/src/Ahadith hasan/ALtermithi.css
@@ -1,13 +1,20 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .ALtermithi {
-    font-family: 'Segoe UI', serif;
+    font-family: 'Times New Roman', serif;
     line-height: 1.6;
     color: #333;
     padding: 15px;
     background-color: #5bffff61;
     border-radius: 15px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 .grade{
-    font-size: 18px;
+    font-size: 22px;
     margin: 10px 0;
     background-color: #3affef73;
     display: inline-block;
@@ -23,6 +30,14 @@
     padding: 15px;
     border-radius: 15px;
 }
+.explane{
+    font-size: 22px;
+    margin: 15px 0;
+    color: #000;
+    background-color: #ffff004c;
+    padding: 10px;
+    border-radius: 10px;
+}
 .narrator{
     font-size: 24px;
     margin: 10px 0;
@@ -31,6 +46,10 @@
     font-size: 22px;
     margin: 10px 0;
     font-weight: bold;
+    color: #000;
+    background-color: #ff00001f;
+    padding: 10px;
+    border-radius: 10px;
 }
 .buttons{
     margin-top: 20px;
