--- a/Tarmeez-pro/src/App.css
+++ b/Tarmeez-pro/src/App.css
@@ -9,14 +9,14 @@
 .App {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   height: 100%;
   width: 100%;
   color: black;
   background: linear-gradient(45deg, #a2a2a2, #eadada);
 }
-button , ul{
+buttons{
   cursor: pointer;
   list-style: none;
   display: flex;
@@ -28,4 +28,15 @@ button , ul{
   border-radius: 10px;
   box-shadow: 0 5px 7px rgba(0, 0, 0, 0.5);
   border: 1px solid black;
+  color: #fff;
+}
+button{
+  padding: 10px;
+  margin: 20px 10px;
+  border-radius: 10px;
+  box-shadow: 0 5px 7px rgba(0, 0, 0, 0.5);
+  border: 1px solid black;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
 }
