--- a/Sunnah-App/src/Select.css
+++ b/Sunnah-App/src/Select.css
@@ -89,4 +89,24 @@ h1{
     background-color: rgba(255, 0, 0, 0.32);
 }
 
+@media (max-width: 768px) {
+    .Select{
+        font-size: 16px;
+        margin: 5px;
+        padding: 5px;
+    }
+    .btn1{
+        font-size: 18px;
+        width: 200px;
+    }
+    .btn2{
+        font-size: 18px;
+        width: 200px;
+    }
+    .btn3{
+        font-size: 18px;
+        width: 200px;
+    }
+}
+
 
