--- a/Portfolio-pro/src/About/About.css
+++ b/Portfolio-pro/src/About/About.css
@@ -18,7 +18,7 @@
     text-shadow: 0 0 4px rgba(0, 198, 198, 1);
 }
 .Text p{
-    font-size: 24px;
+    font-size: 22px;
     font-weight: bold;
     color: #fff;
     text-shadow: 0 0 3px rgba(0, 198, 198, 1);
@@ -29,6 +29,7 @@
     border-radius: 16%;
     box-shadow: 0 0 10px rgba(0, 198, 198, 1);
     transition: box-shadow 0.3s ease-in-out;
+    margin: 20px;
     
 }
 .profile:hover{
