--- a/Portfolio-pro/src/Header/Header.css
+++ b/Portfolio-pro/src/Header/Header.css
@@ -21,6 +21,7 @@
 }
 .header h1 span{
     color: rgba(0, 198, 198, 1);
+    text-shadow: 0 0 3px rgba(0, 198, 198, 1);
 }
 .header nav{
     display: flex;
@@ -38,9 +39,10 @@
 .header nav a:hover{
     color: rgba(0, 198, 198, 1);
 }
-.active-link {
-    text-shadow: 0 0 3px rgba(0, 198, 198, 1);
-    background-color: rgba(0, 198, 198, 0.276);
-    padding: 10px;
-    border-radius: 10px;
+.active-link{
+    background-color: rgba(0, 198, 198, 0.3);
+    color: rgba(0, 198, 198, 1);
+    padding: 8px 16px;
+    border-radius: 5px;
+    border-bottom: 3px solid rgba(0, 198, 198, 1);
 }
