--- a/Portfolio-pro/src/index.css
+++ b/Portfolio-pro/src/index.css
@@ -42,7 +42,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  /* background-color: #1a1a1a; */
+  background: linear-gradient(to right, #0f2027, #203a43, #2c5364c4);
   cursor: pointer;
   transition: border-color 0.25s;
 }
