--- a/Portfolio-pro/src/Projects/Projects.css
+++ b/Portfolio-pro/src/Projects/Projects.css
@@ -1,12 +1,13 @@
 .Projects{
     margin-top: 0;
-    margin-bottom: 50px;
-    padding-top: 80px;
+    margin-bottom: 20px;
+    padding-top: 70px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     color: #fff;
+    overflow: hidden;
 }
 
 .container{
@@ -14,8 +15,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 20px;
-    padding: 20px;
+    margin: 15px;
+    padding: 15px;
     border-radius: 10px;
 }
 .container h1 span{
@@ -31,11 +32,17 @@
     font-weight: bold;
     color: #fff;
     text-shadow: 0 0 3px rgba(0, 198, 198, 1);
+    text-align: center;
 }
+.container p span{
+    color: rgba(0, 198, 198, 1);
+    text-shadow: 0 0 1px rgba(0, 198, 198, 1);
+}
+
 .project-card{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    margin: 20px auto;
+    margin: 10px auto;
     padding: 10px;
     margin: 10px 0;
     border-radius: 10px;
@@ -91,6 +98,7 @@
     font-size: 18px;
     font-weight: 700;
     color: #fff;
+    text-shadow: 0 0 2px rgba(0, 198, 198, 1);
     margin: 0;
 }
 
@@ -162,8 +170,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 10px;
-    padding: 10px;
+    /* margin: 10px; */
+    /* padding: 10px; */
     border-radius: 10px;
     font-size: 22px;
     font-weight: bold;
@@ -174,7 +182,7 @@
     margin: 10px;
     padding: 10px;
     border-radius: 10px;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: bold;
     color: #000;
     text-shadow: 0 0 3px rgba(0, 198, 198, 1);
