--- a/Portfolio-pro/src/index.css
+++ b/Portfolio-pro/src/index.css
@@ -5,19 +5,14 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  background: linear-gradient(to right, #0f2027, #203a43, #2c5364f1);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
+
 a:hover {
   color: #535bf2;
 }
@@ -42,7 +37,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background: linear-gradient(to right, #0f2027, #203a43, #2c5364c4);
+  /* background: linear-gradient(to right, #0f2027, #203a43, #2c5364c4); */
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -59,9 +54,7 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
+  
   button {
     background-color: #f9f9f9;
   }
