--- a/Portfolio-pro/src/About/About.css
+++ b/Portfolio-pro/src/About/About.css
@@ -12,6 +12,12 @@
     margin: 20px;
     text-align: center;
 }
+
+.Text h1{
+    font-size: 50px;
+    color: #fff;
+    text-shadow: 0 0 3px rgba(0, 198, 198, 1);
+}
 .Text h1 span{
     font-size: 50px;
     color: rgba(0, 198, 198, 1);
@@ -22,6 +28,18 @@
     font-weight: bold;
     color: #fff;
     text-shadow: 0 0 3px rgba(0, 198, 198, 1);
+}
+.Profile{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.Profile h2{
+    font-size: 28px;
+    color: #fff;
+    text-shadow: 0 0 3px rgba(0, 198, 198, 1);
+    color: rgba(0, 198, 198, 1);
 }
 .profile{
     width: 400px;
@@ -64,6 +82,9 @@
         font-weight: bold;
         color: #fff;
         text-shadow: 0 0 3px rgba(0, 198, 198, 1);
+    }
+    .Profile{
+        padding-top: 70px;
     }
     .profile{
         width: 250px;
