--- a/Portfolio-pro/src/Skills/Skills.css
+++ b/Portfolio-pro/src/Skills/Skills.css
@@ -1,8 +1,7 @@
 #skills{
-    padding: 50px 20px;
-    position: relative;
+    padding: 100px 20px 50px;
 }
-.skills-container h1{
+.container h1{
     font-size: 50px;
     text-align: center;
     margin-bottom: 50px;
@@ -66,5 +65,46 @@
 .skill-level-text{
     margin-top: 10px;
     text-align: right;
+}
+
+@media (max-width: 1439px){
+    .skills-list{
+        grid-template-columns: repeat(2, 1fr);
+        padding: 40px;
+        gap: 20px;
+    }
+    .container h1{
+        font-size: 40px;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .menu-icon{
+        font-size: 28px;
+        cursor: pointer;
+    }
+}
+@media (max-width: 767px){
+    .skills{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 600px;
+    }
+    .skills-list{
+        grid-template-columns: repeat(1, 1fr);
+        padding-top: 200px;
+        margin-bottom: 200px;
+        gap: 20px;
+    }
+    .container h1{
+        font-size: 30px;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .menu-icon{
+        font-size: 28px;
+        cursor: pointer;
+    }
 }
 
