--- a/Tailwind-css/src/index.css
+++ b/Tailwind-css/src/index.css
@@ -7,7 +7,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background: linear-gradient(45deg, rgb(180, 134, 180),rgb(177, 255, 177),rgb(255, 189, 255),rgb(166, 248, 166));
+  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -37,7 +37,17 @@ h1 {
   line-height: 1.1;
 }
 
-
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
 button:hover {
   border-color: #646cff;
 }
