--- a/Portfolio-pro/src/index.css
+++ b/Portfolio-pro/src/index.css
@@ -5,8 +5,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background: linear-gradient(to right, #0f2027, #203a43, #2c5364f1);
   font-synthesis: none;
+  background-color: #000;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
