--- a/Portfolio-pro/src/App.css
+++ b/Portfolio-pro/src/App.css
@@ -10,7 +10,7 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
-  background: linear-gradient(to right, #0f2027, #203a43, #2c5364c4);
+  background-color: black;
 }
 
 
